<resources>
    <string name="app_name">ShiftsApplication</string>
    <string name="title_activity_main">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="shift_fragment_label">Coffee Co Shifts</string>
    <string name="create_fragment_label">Create Shift</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_shift">Add Shift</string>
    <string name="date_hint">Select Date</string>
    <string name="start_date_hint">Start Date</string>
    <string name="end_date_hint">End Date</string>
    <string name="employee_hint">Employee</string>
    <string name="role_hint">Role</string>
    <string name="color_label">Color</string>
    <string name="color_hint">Color</string>
    <string name="save">Save</string>
    <string name="success">"Shift has been saved successfully"</string>
</resources>