<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:id="@+id/container"
    android:layout_height="match_parent"
    tools:context=".ui.NewShiftFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="@dimen/horizontal_margin"
        android:id="@+id/startDateLayout"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:hint="@string/start_date_hint"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/startDate"
            android:focusable="false"
            android:inputType="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="@dimen/vertical_margin"
        android:id="@+id/endDateLayout"
        app:layout_constraintTop_toBottomOf="@id/startDateLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:hint="@string/end_date_hint"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/endDate"
            android:focusable="false"
            android:inputType="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:id="@+id/employee_layout"
        android:hint="@string/employee_hint"
        android:layout_marginTop="@dimen/vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/endDateLayout"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/employee"
            android:inputType="none"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:id="@+id/roleLayout"
        android:hint="@string/role_hint"
        android:layout_marginTop="@dimen/vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/employee_layout"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/role"
            android:focusable="false"
            android:inputType="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:id="@+id/colorLayout"
        android:hint="@string/color_hint"
        android:layout_marginTop="@dimen/vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/roleLayout"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/color"
            android:focusable="false"
            android:inputType="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        app:layout_constraintTop_toBottomOf="@id/colorLayout"
        android:layout_width="match_parent"
        android:text="@string/save"
        android:id="@+id/save"
        android:textColor="@color/white"
        android:enabled="false"
        android:background="@drawable/button_selector"
        android:layout_marginTop="@dimen/horizontal_margin"
        android:layout_height="@dimen/button_height"/>



</androidx.constraintlayout.widget.ConstraintLayout>